feat(arch)!: transition to client-server model with GraalVM native support
- Decouple CLI (compiler) from Server (runtime) using JSON workflow serialization
- Implement REST API endpoints for workflow lifecycle (build/push/pull/list/delete)
- Migrate persistence layer to server-side only, removing dependencies from core
- Refactor LangChain4j integration to Quarkus extension for Native Image compatibility
- Replace Agent Provider SPI (ServiceLoader) with explicit registration to ensure GraalVM Native Image compatibility
- Enable GraalVM Native Image build support for the server artifact